@@ -1,5 +1,13 @@
 2008-02-15  Anthony Green  <green@redhat.com>
 
+	* index.html: 3.0 is done!
+
+2008-02-15  Anthony Green  <green@redhat.com>
+
+	* index.html: Credit Casey Marshall.
+
+2008-02-15  Anthony Green  <green@redhat.com>
+
 	* index.html: New release.
 
 2008-02-15  Anthony Green  <green@redhat.com>
